--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px auto;
   padding: 0 24px;
 }
@@ -104,7 +105,6 @@ body * {
   right: 0;
   left: initial;
   animation: slide-in 0.2s forwards;
-
 }
 
 @keyframes slide-back {
